# evoapi-mcp

./: .env.example  .gitignore  CHANGELOG.md  FIXES.md  INSTALL.md  KNOWN_ISSUES.md  LICENSE  NEXT_STEPS.md  README.md  ROADMAP.md  SUMMARY.md  TODO.md  pyproject.toml  test_contacts.py  test_phase1.py
docker/: .env.docker.example  Dockerfile  README.md  docker-compose.yml
src/evoapi_mcp/: __init__.py  client.py  config.py  http_server.py  server.py
src/evoapi_mcp/tools/: __init__.py
